# Irfan-browser

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  PRODUCT.md  PROJECT-MAP.md  README.md  package-lock.json  package.json  style_guide.md  ui_style_guide.md
backend/: alembic.ini  backend.spec  backend_entry.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_baseline.py  002_person_biographical_fields.py  003_add_repository_volume_number.py  004_repository_location_drop_kind.py  005_volume_drop_library_shelfmark.py  006_work_copy_date_drop_type.py  007_annotation_drop_date_fields.py  008_person_wilayas_nasab.py  009_activity_log.py  010_drop_confidence.py  011_work_incipit_explicit_title_source.py  012_work_topic_classification.py  013_work_copy_place.py  014_annotation_date.py  015_work_part_number.py
backend/src/: main.py
backend/src/api/: annotations.py  dashboard.py  export.py  persons.py  relationships.py  trace.py  vocab.py  volumes.py  works.py
backend/src/db/: engine.py  models.py  seed.py
backend/tests/: conftest.py  test_appearances.py  test_dashboard.py  test_deletion.py  test_error_handling.py  test_export.py  test_export_validation.py  test_foreign_keys.py  test_http_annotations.py  test_http_persons.py  test_http_relationships.py  test_http_trace.py  test_http_vocab.py  test_http_volumes.py  test_http_works.py  test_migrations.py  test_not_found.py  test_persons.py  test_relationship_constraints.py  test_repositories.py  test_search.py  test_seed.py  test_vocab_validation.py  test_volumes.py
docs/: project_spec.md  (+3 more)
(+80 files in other folders)
