[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pillow>=10.0.0",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
build = [
    "pyinstaller>=6.0",
]
